--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -1,9 +1,16 @@
 //COLORS
 $color-primary: #55c57a;
-$color-primary-light: #28b485;
-$color-primary-dark: #7ed56f;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #2563fa;
 
 $color-grey-light-1: #e9e9e9;
+$color-grey-light-2: rgb(203, 203, 203);
 
 $color-grey-dark: #777;
 $color-white: #fff;
