--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -34,7 +34,7 @@ body {
   font-weight: 700;
   display: inline-block;
   background-image: linear-gradient(
-    to left,
+    to right,
     $color-primary-light,
     $color-primary-dark
   );
