--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -103,6 +103,9 @@ body {
 .u-margin-top-big {
   margin-top: 8rem; }
 
+.u-margin-top-huge {
+  margin-top: 10rem; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -205,6 +208,8 @@ body {
     height: 23rem;
     background-blend-mode: screen;
     clip-path: polygon(0 0, 100%, 0, 100% 85%, 0 100%);
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem;
     background-size: cover;
     background-size: cover; }
     .card__picture--1 {
@@ -369,5 +374,5 @@ body {
 
 .section-tours {
   background-color: #e9e9e9;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
