--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -61,6 +61,8 @@
     height: 23rem;
     background-blend-mode: screen;
     clip-path: polygon(0 0, 100%, 0, 100% 85%, 0 100%);
+    border-top-left-radius: 0.3rem;
+    border-top-right-radius: 0.3rem;
 
     &--1 {
       background-image: linear-gradient(
