--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $color-grey-light-1: #e9e9e9;
 $color-grey-light-2: rgb(203, 203, 203);
 
 $color-grey-dark: #777;
+$color-grey-dark-2: rgb(92, 92, 92);
+$color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 
