--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -7,12 +7,15 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg-video";
 @import "components/button";
 @import "components/card";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/form";
 @import "components/story";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
